--- a/HorseEgg/plugin.yml
+++ b/HorseEgg/plugin.yml
@@ -1,7 +1,8 @@
 name: HorseEggs
 main: wacky.horseeggs.HorseEggs
-version: 1.1.0
+version: 1.1.1
 author: wackyls6
+api-version: 1.13
 permissions:
     horseeggs.*:
         description:
