--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: HorseEggs
 main: wacky.horseeggs.HorseEggs
-version: 1.1.3b
+version: 1.1.4
 author: wackyls6
 api-version: 1.13
 permissions:
